# passworddog

./: README.md
backend/: .gitignore  Cargo.toml  README.md  passworddog.db-shm  passworddog.db-wal
backend/migrations/: 20250201_init.sql
backend/src/: main.rs
backend/src/db/: mod.rs
backend/src/handlers/: auth.rs  mod.rs  password.rs
backend/src/models/: mod.rs  password.rs  user.rs
backend/src/utils/: crypto.rs
frontend/: README.md  package-lock.json
frontend/src/app/: page.tsx
frontend/src/app/auth/login/: page.tsx
