[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["PasswordDog Team"]
description = "A secure password management system"

[dependencies]
actix-web = "4.4"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
argon2 = "0.5"  # 密码哈希
rand = "0.8"    # 随机数生成
aes-gcm = "0.10" # 加密
base64 = "0.21" # 编码
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"
